PLAT-85426: Fix Switch colors for improved visibility (#2535)
* add border to switch


* fix Switch colors


* change log


* Update Switch.module.less

* revert accidental changes

* remove border for unselected switch in light skin


* Updated the width to a variable, removed the dark skin stroke

Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/packages/moonstone/styles/colors-light.less
+++ b/packages/moonstone/styles/colors-light.less
@@ -252,10 +252,12 @@
 
 // Switch
 // ---------------------------------------
-@moon-checkbox-toggle-switch-color: #d2d2d2;
+@moon-checkbox-toggle-switch-color: #d3d3d3;
 @moon-checkbox-toggle-switch-bg-color: #a6a6a6;
-@moon-checkbox-toggle-switch-selected-color: @moon-white;
-@moon-checkbox-toggle-switch-selected-bg-color: @moon-dark-gray;
+@moon-checkbox-toggle-switch-border-color: transparent;
+@moon-checkbox-toggle-switch-selected-color: @moon-accent;
+@moon-checkbox-toggle-switch-selected-border-color: @moon-dark-gray;
+@moon-checkbox-toggle-switch-selected-bg-color: @moon-white;
 
 // Toggle Colors
 // ---------------------------------------
